Datastructure change (#38)
* It is a beginning of very tedious and frustrating process...

* Resolved every issue connected with data structure changes and test adjusted, every test passed

* minor changes

* chore: fix linting issues

* chore: fix linting issues

---------

Co-authored-by: Pepesob <Pepesob@users.noreply.github.com>
Co-authored-by: socz3qqq <socz3qqq@users.noreply.github.com>